--- a/angular.json
+++ b/angular.json
@@ -66,6 +66,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {},
           "configurations": {
             "production": {
               "buildTarget": "nutripia-app:build:production"
